# MIT-6.837-Assignments

./: README.md
Assignment0/: CMakeLists.txt  ifs.cpp  ifs.h  main.cpp  matrix.h  random.cpp  random.h
Assignment1/: CMakeLists.txt  camera.cpp  camera.h  group.cpp  main.cpp  object3d.h  scene_parser.C  sphere.cpp
Assignment2/: CMakeLists.txt  camera.cpp  global.cpp  global.h  group.h  plane.h  renderer.h  scene_parser.C  sphere.cpp  transform.cpp  transform.h  triangle.cpp
Assignment3/: CMakeLists.txt  README.md  camera.cpp  camera.h  glCanvas.C  global.cpp  global.h  group.cpp  light.C  main.cpp  object3d.h  plane.cpp  renderer.cpp  renderer.h  scene_parser.C  sphere.cpp  sphere.h  transform.cpp  transform.h  triangle.cpp  triangle.h
Assignment4/: CMakeLists.txt  README.md  glCanvas.C  global.cpp  global.h  main.cpp  material.h  object3d.h  plane.cpp  plane.h  rayTree.h  ray_tracer.cpp  ray_tracer.h  renderer.cpp  renderer.h  scene_parser.C  triangle.h
Assignment4/glut/Debug/: freeglutd.exp
Assignment4/glut/Release/: freeglut.exp
Assignment5/: CMakeLists.txt  README.md  glCanvas.C  global.cpp  global.h  grid.cpp  grid.h  group.cpp  group.h  main.cpp  object3d.h  plane.cpp  ray.h  ray_tracer.cpp  ray_tracer.h  scene_parser.C  sphere.cpp  sphere.h  transform.cpp  transform.h  triangle.h
Assignment6/: CMakeLists.txt  README.md  boundingbox.C  camera.cpp  glCanvas.C  global.h  grid.cpp  grid.h  group.h  hit.h  main.cpp  material.cpp  material.h  matrix.h  object3dvector.h  plane.cpp  ray_tracer.cpp  ray_tracer.h  renderer.cpp  sphere.cpp  transform.h  triangle.cpp  triangle.h  vectors.h
Assignment7/: CMakeLists.txt  README.md  camera.cpp  (+25 more)
Assignment8/: .gitignore  CMakeLists.txt  README.md  curve.cpp  curve.h  glCanvas.C  main.C  spline.h  spline_parser.C  surface.cpp  surface.h
(+17 files in other folders)
